index and details almost done

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
+    <div id="messageContainer"></div>
+    <img src="/MonsterHunterHeader.jpg">
+        <h1>Monsters from Monster Hunter: World</h1>
+        <div class="result">
+            <div class="loading"></div>
+        </div>
+    <script src="js/index.js"></script>
 </body>
 </html>
