--- a/details.html
+++ b/details.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/details.css">
 </head>
 <body>
-    
+    <div id="messageContainer"></div>
+    <img src="/MonsterHunterHeader.jpg">
+    <button id="back"><< Back</button>
+    <section class="details-container">
+        <div class="loading"></div>
+    </section>
+    <script src="js/details.js"></script>
 </body>
 </html>
