--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <div id="messageContainer"></div>
     <img src="/MonsterHunterHeader.jpg">
-        <h1>Monsters from Monster Hunter: World</h1>
+        <header>
+            <h1>Monsters from Monster Hunter: World</h1>
+            <a href="contact.html">Contact</a>
+        </header>
         <div class="result">
             <div class="loading"></div>
         </div>
