--- a/details.html
+++ b/details.html
@@ -11,7 +11,10 @@
 <body>
     <div id="messageContainer"></div>
     <img src="/MonsterHunterHeader.jpg">
-    <button id="back"><< Back</button>
+    <header>
+        <button id="back"><< Back</button>
+        <a href="contact.html">Contact</a>
+    </header>
     <section class="details-container">
         <div class="loading"></div>
     </section>
