--- a/contact.html
+++ b/contact.html
@@ -18,25 +18,26 @@
     <section>
         <h1>Contact</h1>
         <form>
+            <div class="success-container"></div>
             <label>
                 Name 
                 <input name="yourName" id="yourName">
-                <span class="name-err-container"></span>
+                <div class="name-err-container"></div>
             </label>
             <label class="subject-label">
                 Subject (min. 10 characters) 
                 <input name="subject" id="subject">
-                <span class="subject-err-container"></span>
+                <div class="subject-err-container"></div>
             </label>
             <label class="email-label">
                 Email 
                 <input name="email" id="email">
-                <span class="email-err-container"></span>
+                <div class="email-err-container"></div>
             </label>
             <label class="adress-label">
                 Address (min. 25 characters) 
                 <input name="address" id="address">
-                <span class="address-err-container"></span>
+                <div class="address-err-container"></div>
             </label>
             <button id="submit-btn">Submit</button>
         </form>
