cleaned up some functions and added images for details page by species

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="messageContainer"></div>
-    <img src="/MonsterHunterHeader.jpg">
+    <img src="/MonsterHunterHeader.jpg" class="bkgr-img">
         <header>
             <h1>Monsters from Monster Hunter: World</h1>
             <a href="contact.html">Contact</a>
