--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="messageContainer"></div>
-    <img src="/MonsterHunterHeader.jpg">
+    <img src="/MonsterHunterHeader.jpg" class="bkgr-img">
     <header>
         <button id="back"><< Back</button>
         <a href="contact.html">Contact</a>
